--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 	<title>Just Test</title>
 </head>
 <body>
-Kangbud just test
+<p>Kangbud just test</p>
+<a href="masuk.html">masuk</a>
 </body>
 </html>
 
