--- a/index.html
+++ b/index.html
@@ -1,10 +1,29 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Just Test</title>
+	<title>Panduan Zakat</title>
+<link rel="stylesheet" href="css/style.css">	
 </head>
 <body>
-<p>Kangbud just test</p>
+<header>
+	Panduan Zakat
+</header>
+<div id="main">
+	<ul>
+		<li><a href="pengertian.html">Pengertian Zakat, Infak dan Sedekah</li>
+		<li><a href="">Zakat Perkebunan Kelapa Sawit dan Karet</li>
+		<li><a href="">Hukum Zakat Profesi</li>
+		<li><a href="">Hukum Zakat Istri Kepada Suami</li>
+		<li><a href="">Hukum Zakat Anak Kepada Orang Tua</li>
+		<li><a href="">Zakat Hutang</li>
+		<li><a href="">Syarat-Syarat Zakat</li>
+		<li><a href="">Harta-Harta yang Wajib Dizakati & Cara Menghitungnya (bag. 1)</li>
+		<li><a href="">Harta-Harta yang Wajib Dizakati & Cara Menghitungnya (bag. 2)</li>
+		<li><a href="">Zakat Fitrah</li>
+		<li><a href="">Orang-Orang Yang Berhak Mendapatkan Zakat</li>
+	</ul>	
+
+</div>
 <a href="masuk.html">masuk</a>
 </body>
 </html>
