--- a/index.html
+++ b/index.html
@@ -9,22 +9,23 @@
 	Panduan Zakat
 </header>
 <div id="main">
-	<ul>
-		<li><a href="pengertian.html">Pengertian Zakat, Infak dan Sedekah</li>
-		<li><a href="">Zakat Perkebunan Kelapa Sawit dan Karet</li>
-		<li><a href="">Hukum Zakat Profesi</li>
-		<li><a href="">Hukum Zakat Istri Kepada Suami</li>
-		<li><a href="">Hukum Zakat Anak Kepada Orang Tua</li>
-		<li><a href="">Zakat Hutang</li>
-		<li><a href="">Syarat-Syarat Zakat</li>
-		<li><a href="">Harta-Harta yang Wajib Dizakati & Cara Menghitungnya (bag. 1)</li>
-		<li><a href="">Harta-Harta yang Wajib Dizakati & Cara Menghitungnya (bag. 2)</li>
-		<li><a href="">Zakat Fitrah</li>
-		<li><a href="">Orang-Orang Yang Berhak Mendapatkan Zakat</li>
-	</ul>	
+		<a  class="myButton" href="pengertian.html">Pengertian Zakat, Infak dan Sedekah</a>
+		<a  class="myButton" href="syarat.html">Syarat-Syarat Zakat</a>
+		<a  class="myButton" href="harta1.html">Harta-Harta yang Wajib Dizakati & Cara Menghitungnya (bag. 1)</a>
+		<a  class="myButton" href="harta2.html">Harta-Harta yang Wajib Dizakati & Cara Menghitungnya (bag. 2)</a>
+		<a  class="myButton" href="profesi.html">Hukum Zakat Profesi</a>
+		<a  class="myButton" href="perkebunan.html">Zakat Perkebunan Kelapa Sawit dan Karet</a>
+		<a  class="myButton" href="istri.html">Hukum Zakat Istri Kepada Suami</a>
+		<a  class="myButton" href="anak.html">Hukum Zakat Anak Kepada Orang Tua</a>
+		<a  class="myButton" href="hutang.html">Zakat Hutang</a>
+		<a  class="myButton" href="fitrah.html">Zakat Fitrah</a>
+		<a  class="myButton" href="mustahik.html">Orang-Orang Yang Berhak Mendapatkan Zakat</a>
 
 </div>
-<a href="masuk.html">masuk</a>
+<footer>
+	<a href="info.html"><img src="images/info.png" /></a>
+	<a href="contact.html"><img src="images/mail.png" /></a>
+</footer>
 </body>
 </html>
 
