--- a/info.html
+++ b/info.html
@@ -6,18 +6,17 @@
 </head>
 <body>
 <header>
-	<a href="index.html">Panduan Zakat</a>
+	Panduan Zakat
 </header>
 
 <div id="content">
-<h2>Pengertian Zakat, Infak dan Sedekah</h2>
-<p style="text-align: justify;"><strong>A. Pengertian Zakat</strong></p>
+<h2>Pengertian&nbsp; Zakat</h2>
 <p style="text-align: justify;">Zakat mempunyai beberapa arti, diantaranya :</p>
 <p style="text-align: justify;">Pertama<em> : An-Nama </em>(tumbuh dan berkembang), artinya bahwa harta yang dikeluarkan zakat darinya, tidaklah akan berkurang, justru akan tumbuh dan berkembang lebih banyak. Faktanya sudah sangat banyak.</p>
 <p style="text-align: justify;">Kedua<em> : Ath-Thaharah</em> (suci), artinya bahwa harta yang dikeluarkan zakatnya, akan menjadi bersih dan membersihkan jiwa yang memilikinya dari kotoran hasad, dengki dan bakhil.</p>
-<p style="text-align: justify;">Ketiga : <em>Ash-Sholahu</em> (baik), artinya bahwa harta yang dikeluarkan zakatnya, akan menjadi baik dan zakat sendiri akan memperbaiki kwalitas harta tersebut dan memperbaiki amal yang memilikinya. &nbsp;</p>
+<p style="text-align: justify;">&nbsp;Ketiga : <em>Ash-Sholahu</em> (baik), artinya bahwa harta yang dikeluarkan zakatnya, akan menjadi baik dan zakat sendiri akan memperbaiki kwalitas harta tersebut dan memperbaiki amal yang memilikinya. &nbsp;</p>
 <p style="text-align: justify;">Adapun zakat secara istilah adalah jenis harta tertentu yang pemiliknya diwajibkan untuk memberikannya kepada orang-orang tertentu dengan syarat-syarat tertentu juga.</p>
-<p style="text-align: justify;"><strong>B. Pengertian Infak</strong></p>
+<p style="text-align: justify;">&nbsp;<strong>Pengertian Infak</strong></p>
 <p style="text-align: justify;">Infak dari akar kata : <em>Nafaqa (Nun, Fa&rsquo;, dan Qaf</em>), yang mempunyai arti keluar. Dari akar kata inilah muncul istilah Nifaq-Munafiq, yang mempunyai arti orang yang keluar dari ajaran Islam.</p>
 <p style="text-align: justify;">Kata (<em>infaq)</em>, yang huruf akhirnya mestinya &ldquo;Qaf&rdquo;, oleh orang Indonesia dirubah menjadi huruf &ldquo; Kaf &rdquo;, sehingga menjadi (<em>infak)</em>.&nbsp; &nbsp;</p>
 <p style="text-align: justify;">Maka, Infaq juga bisa diartikan mengeluarkan sesuatu (harta) untuk suatu kepentingan yang baik, maupun kepentingan yang buruk. Ini sesuai dengan firman Allah yang menyebutkan bahwa orang-orang kafirpun meng <em>"infak</em>" kan harta mereka untuk menghalangi jalan Allah :</p>
@@ -28,7 +27,7 @@
 <p style="text-align: justify;"><strong>Kedua</strong> : Untuk menunjukkan harta yang wajib dikeluarkan selain zakat, seperti kewajiban seorang suami memberikan nafkah untuk istri dan anak-anaknya. Kata <em>infak</em> disini berubah menjadi <em>nafkah</em> atau <em>nafaqah. </em></p>
 <p style="text-align: justify;"><strong>Ketiga </strong>: Untuk menunjukkan harta yang dianjurkan untuk dikeluarkan, tetapi tidak sampai derajat wajib, seperti memberi uang untuk fakir miskin, menyumbang untuk pembangunan masjid atau menolong orang yang terkena musibah. Mengeluarkan harta untuk keperluan-keperluan di atas disebut juga dengan <em>infak. </em></p>
 <p style="text-align: justify;">Biasanya infak ini berkaitan dengan pemberian yang bersifat materi.&nbsp;</p>
-<p style="text-align: justify;"><strong>C. Pengertian Sedekah.</strong></p>
+<p style="text-align: justify;"><strong>Pengertian Sedekah.</strong></p>
 <p style="text-align: justify;">Sedangkan&nbsp; &ldquo;Sedekah&ldquo;&nbsp; secara bahasa berasal dari akar kata (<em>shodaqa</em>) yang terdiri dari tiga huruf : <em>Shod- dal- qaf</em>, berarti sesuatu yang benar atau jujur. Kemudian orang Indonesia merubahnya menjadi Sedekah.</p>
 <p style="text-align: justify;">Sedekah bisa diartikan mengeluarkan harta di jalan Allah, sebagai <em>bukti kejujuran atau kebenaran iman seseorang</em>. Maka Rasulullah menyebut sedekah sebagai burhan (bukti), sebagaimana sabdanya :</p>
 <p style="text-align: justify;"><em>Dari Abu Malik&nbsp; Al harits Bin Ashim Al as'ariy ra.. ia berkata: Rasulullah saw bersabda: "Suci adalah sebagian dari iman, membaca alhamdulillah dapat memenuhi timbangan, Subhanallah dan Alhamdulillah dapat memenuhi semua yang ada diantara langit dan bumi, salat adalah cahaya, <strong><span style="text-decoration: underline;">sedekah itu adalah bukti iman</span></strong>, sabar adalah pelita dan AlQuran untuk berhujjah terhadap yang kamu sukai ataupun terhadap yang tidak kamu sukai. Semua orang pada waktu pagi menjual dirinya, kemudian ada yang membebaskan dirinya dan ada pula yang membinasakan dirinya</em>.&rdquo; (HR. Muslim).</p>
@@ -37,8 +36,8 @@
 <p style="text-align: justify;"><strong>Kesimpulan</strong></p>
 <p style="text-align: justify;">Zakat kalau disebut dalam al-Qur&rsquo;an dan Hadist berarti zakat wajib yang dikenal kaum muslimin sebagai rukun Islam ketiga. Sedangkan Infaq kadang dipakai untuk menyebut infaq wajib (zakat), kadang dipakai untuk menyebut infaq wajib selain zakat (nafkah keluarga). Kadang dipakai untuk menyebut&nbsp; infaq yang tidak wajib. Begitu juga Sedekah, kadang berarti zakat wajib, kadang untuk sesuatu yang tidak wajib. <em>Wallahu A&rsquo;lam</em>.&nbsp;</p>
 <p style="text-align: right;">
-	<a href="syarat.html">Selanjutnya >></a><br />
-	<span class="smalltext"><i>Syarat-Syarat Zakat</i></span>
+	<a href="">Selanjutnya >></a><br />
+	<span class="smalltext"><i>Zakat Perkebunan Kelapa Sawit dan Karet</i></span>
 </p>
 </div>
 </body>
